gap fix

--- a/scss/join-our-team.scss
+++ b/scss/join-our-team.scss
@@ -44,6 +44,8 @@
   }
 
   &.expand {
+    padding-bottom: 2rem;
+    
     .link {
       display: block;
     }
